# monster

./: .gitignore  CMakeLists.txt  Guidelines.md  LICENSE.md  README.md  Tutorial.md  build.sh
example/: CMakeLists.txt  arity.cpp  compiler_detector.cpp  curry.cpp  is_lambda.cpp  loop_unroll.cpp  memoized_invoke.cpp  monster.cpp  object_pool.cpp  overview.cpp  sort_tuple.cpp  stream.cpp  tensor.cpp  thread_pool.cpp  tuple_algorithm.cpp  unique_tuple.cpp  ycombinator.cpp
include/: arity.hpp  compiler_detector.hpp  curry.hpp  hof.hpp  is_identical.hpp  is_lambda.hpp  loop_unroll.hpp  memoized_invoke.hpp  monster.hpp  object_pool.hpp  ring.hpp  sort_tuple.hpp  stream.hpp  tensor.hpp  thread_pool.hpp  to_array.hpp  tuple_algorithm.hpp  unique_tuple.hpp  version.hpp  ycombinator.hpp
src/: Makefile  case_insensitive_compare.hpp  crtp.hpp  curry.hpp  endianness.hpp  lambda.hpp  main.cpp  monster.hpp  object_pool.hpp  tensor.hpp  thread_pool.hpp  union_converter.hpp
