#
# Copyright (c) 2011-present DeepGrace (complex dot invoke at gmail dot com)
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#
# Official repository: https://github.com/deepgrace/monster
#

cmake_minimum_required(VERSION 3.22)
project(Monster)
 
add_subdirectory(example)
